# student_database

./: CMakeLists.txt  README.md
source/: dataBase.cpp  dataBase.hpp  employee.cpp  employee.hpp  main.cpp  person.cpp  person.hpp  peselValidator.cpp  peselValidator.hpp  student.cpp  student.hpp
